--- a/charts/complete-graphql-postgres-provisioner/values.yaml
+++ b/charts/complete-graphql-postgres-provisioner/values.yaml
@@ -7,6 +7,7 @@ postgresProvisioner:
 repository: hasura/graphql-engine
 tag: v2.20.0
 pullPolicy: Always
+domainPath: "hasura"
 containerPort: 8080
 hostname: hasura
 env:
