--- a/charts/complete-graphql-postgres-provisioner/templates/ingressroute.yaml
+++ b/charts/complete-graphql-postgres-provisioner/templates/ingressroute.yaml
@@ -1,4 +1,4 @@
-{{ if and (ne .Values.domainPath "") (hasKey .Values.hasura "domainPath") }}
+{{ if and (ne .Values.domainPath "") (hasKey .Values "domainPath") }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
@@ -14,7 +14,7 @@ spec:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
           port: {{ .Values.containerPort }}
-      {{ if (not (hasKey .Values.hasura "noStripPath")) }}
+      {{ if (not (hasKey .Values "noStripPath")) }}
       middlewares:
       - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}
