--- a/charts/complete-graphql-postgres-provisioner/values.yaml
+++ b/charts/complete-graphql-postgres-provisioner/values.yaml
@@ -4,13 +4,13 @@ postgresProvisioner:
   databaseName: graphql
   databaseUser: YOUR_HASURA_USER
   databasePassword: YOUR_HASURA_PASSWORD
-  
+
 image:
   repository: hasura/graphql-engine
   tag: v2.20.0
   pullPolicy: Always
   domainPath: "hasura"
-  containerPort: 8080
+  containerPort: "8080"
   hostname: hasura
   env:
     - name: HASURA_GRAPHQL_METADATA_DATABASE_URL
