chore: add image pull secret

--- a/charts/complete-graphql-postgres-provisioner/templates/deployment.yaml
+++ b/charts/complete-graphql-postgres-provisioner/templates/deployment.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     {{- include ".helm.labels" . | nindent 4 }}
 spec:
+  {{- with .Values.imagePullSecrets }}
+  imagePullSecrets:
+    {{- toYaml . | nindent 8 }}
+  {{- end }}
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
