updating signaling path to /signaling fro /mqtt

--- a/charts/signaling-service/values.yaml
+++ b/charts/signaling-service/values.yaml
@@ -8,7 +8,7 @@ image:
   containerPort: 4000
   tag: "latest"
   hostname: signaling
-  domainPath: "mqtt"
+  domainPath: "signaling"
 
 ##########################
 # Caution updating below #
