chore: rebase and add DM services

--- a/charts/rest-devicemanager/templates/deployment.yaml
+++ b/charts/rest-devicemanager/templates/deployment.yaml
@@ -45,6 +45,11 @@ spec:
           env: 
             {{- toYaml .Values.image.env | nindent 12 }}
           {{- end }}
+          {{- if .Values.image.envFrom }}
+          envFrom:
+            - secretRef:
+                name: {{ .Values.image.envFrom }}
+          {{- end }}
           args: [ {{.Values.image.args}} ]
           ports:
             - name: http
