--- a/charts/gql-devicemanager/values.yaml
+++ b/charts/gql-devicemanager/values.yaml
@@ -3,25 +3,29 @@ fullnameOverride: gql-devicemanager
 
 image:
   replicaCount: 1
-  repository: ghcr.io/htaic/gql-devicemanager
+  repository: ghcr.io/htaic/gql-devicemanager-local
   pullPolicy: Always
   containerPort: 3003
   tag: "latest"
   hostname: gql-devicemanager
   domainPath: "graphql"
   noStripPath: true
+  envFrom: baseline-redis-secret
   env:
-    - name: ENVVARIABLENAME
-      value: VALUE
-
-##########################
-# Caution updating below #
-##########################
-sidecarimage:
-  name: "logging-sidecar"
-  repository: ghcr.io/htaic/platform-logging-service
-  pullPolicy: Always
-  tag: "latest"
+    - name: DATABASE_HOST
+      value: "YOUR_POSTGRES_HOST"
+    - name: DATABASE_TYPE
+      value: "postgres"
+    - name: DATABASE_PASSWORD
+      value: "YOUR_POSTGRES_PASSWORD"
+    - name: DATABASE_PORT
+      value: "YOUR_POSTGRES_PORT"
+    - name: DATABASE_NAME
+      value: "postgres"
+    - name: DATABASE_USER
+      value: "postgres"
+    - name: OPERATION_ENV
+      value: "EDGE"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
@@ -32,7 +36,7 @@ service:
 resources:
   requests:
     cpu: 100m
-    memory: 250Mi
+    memory: 150Mi
 
 serviceAccount:
   create: true
