force to use 0.0.5 for redis

--- a/charts/core-baseline/Chart.yaml
+++ b/charts/core-baseline/Chart.yaml
@@ -38,5 +38,5 @@ dependencies:
     version: "^0.1.9"
     repository: "https://htaic.github.io/helm-charts"
   - name: redis
-    version: "^0.0.3"
+    version: "0.0.5"
     repository: "https://htaic.github.io/helm-charts"
