--- a/charts/kafka-rest-consumer-service/values.yaml
+++ b/charts/kafka-rest-consumer-service/values.yaml
@@ -1,20 +1,20 @@
 namespace: "hanwha"
 fullnameOverride: kafka-rest-consumer-service
-
+postgresUpdater:
+  image: ghcr.io/htaic/kafka-client-services-postgres-runner
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/kafka-rest-consumer-service
   pullPolicy: Always
-  tag: 'sha-4ab91b8'
-  secretref: 'baseline-postgresql-secret' # this is the secret where the database information will be pulled from
+  tag: "sha-1688a3f"
+  secretref: "baseline-postgresql-secret" # this is the secret where the database information will be pulled from
   env:
     - name: APP_DATA_VERSION
       value: "12"
     - name: KAFKA_REST_URL
       value: KAFKA_REST_PROXY_URL # this value is different between cloud and edge (edge has to go throuh internet to reach Traefik. In cloud, requests are made to Traefik's internal endpoint)
-    # Default Value is set at the image level https://github.com/htaic/kafka-rest-node-services/blob/main/Dockerfile-consumer
-    # - name: GROUP_NAME
-    #   value: A_CONSUMER_GROUP_NAME # this must be unique per deployment instance. For example, cloud instance has a different value than any edge location.
+    - name: GROUP_NAME
+      value: A_CONSUMER_GROUP_NAME # this must be unique per deployment instance. For example, cloud instance has a different value than any edge location.
     - name: LOG_LEVEL
       value: DEBUG
     - name: LOG_SINK
@@ -26,7 +26,7 @@ image:
     - name: MAX_CONSUMER_RESTART_ATTEMPTS
       value: "3"
     - name: OPERATION_ENV
-      value: edge
+      value: "edge"
 
 ##########################
 # Caution updating below #
@@ -42,5 +42,5 @@ imagePullSecrets:
 
 resources:
   requests:
-    cpu: 100m
-    memory: 250Mi
+    cpu: 150m
+    memory: 350Mi
