--- a/charts/distributor-devicemanager/Chart.yaml
+++ b/charts/distributor-devicemanager/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: core-baseline
-description: A Helm chart for Kubernetes
+name: distributor-devicemanager
+description: A Helm chart for Kubernetes distributor-devicemanager deployed behind a traefik ingress
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,28 +15,10 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.3
+version: 0.0.2
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.0.1"
-
-# kubeVersion: ">=1.17.0-0"
-
-# This is where the helm chart will automatically pull content from a remote helm chart. Overrides
-# can also be done for this so ensure naming overlap doesn't conflict or break your local or the remote
-# helm chart dependency.
-# https://helm.sh/docs/helm/helm_dependency/
-# https://github.com/traefik/traefik-helm-chart
-dependencies:
-  - name: traefik
-    version: "^10.24.2"
-    repository: https://helm.traefik.io/traefik
-  - name: postgresql
-    version: "^0.1.9"
-    repository: "https://htaic.github.io/helm-charts"
-  - name: redis
-    version: "^0.0.5"
-    repository: "https://htaic.github.io/helm-charts"
