--- a/charts/rest-devicemanager/templates/deployment.yaml
+++ b/charts/rest-devicemanager/templates/deployment.yaml
@@ -30,6 +30,24 @@ spec:
       serviceAccountName: {{ include ".helm.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- if .Values.postgresProvisioner }}
+      initContainers:
+        - name: {{ .Chart.Name }}-postgres-provisioner
+          {{- if hasKey .Values.postgresProvisioner "tag" }}
+          image: {{ .Values.postgresProvisioner.image }}:{{ .Values.postgresProvisioner.tag }}
+          {{ else }}
+          image: {{ .Values.postgresProvisioner.image }}:latest
+          {{ end }}
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command: ['sh', '-c', '/home/developer/executecommands.sh']
+          envFrom:
+            - secretRef:
+                name: "baseline-postgresql-secret"
+            - secretRef:
+                name: "iss-service-secret"
+            - configMapRef:
+                name: "baseline-configmap"
+      {{- end }}
       containers:
         {{- if .Values.sidecarimage }}
         - name: "{{ .Values.sidecarimage.name }}"
