--- a/charts/rest-devicemanager/values.yaml
+++ b/charts/rest-devicemanager/values.yaml
@@ -2,7 +2,7 @@ namespace: 'hanwha'
 fullnameOverride: rest-devicemanager
 
 postgresProvisioner:
-  image: rest-devicemanager-postgres-provisioner
+  image: ghcr.io/htaic/rest-devicemanager-postgres-provisioner
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/rest-devicemanager-local
