--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -15,6 +15,7 @@ traefik:
   providers:
     kubernetesCRD:
       allowCrossNamespace: true
+      allowExternalNameServices: true
 
 redis:
   redis:
