chore: update variable names and create secret

--- a/charts/video-connection-manager/values.yaml
+++ b/charts/video-connection-manager/values.yaml
@@ -15,7 +15,11 @@ image:
     - name: SERVICE_NAME
       value: VideoConnectionManager-1.0    
     - name: MSG_VERSION
-      value: '1.0'    
+      value: '1.0'
+    - name: GRAPHQLURL
+      value: './hasura/v1/api'
+    # - name: GRAPHQLSERVERTOKEN
+    #   value: './hasura/v1/api'
 
 sidecarimage:
   name: 'logging-sidecar'
