--- a/charts/complete-graphql-postgres-provisioner/templates/deployment.yaml
+++ b/charts/complete-graphql-postgres-provisioner/templates/deployment.yaml
@@ -53,6 +53,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          envFrom:
+            - secretRef:
+                name: "hasura-secret"
           {{- if .Values.image.env }}
           env: 
             {{- toYaml .Values.image.env | nindent 12 }}
