chore: wire secrets to hasura

--- a/charts/complete-graphql-postgres-provisioner/templates/deployment.yaml
+++ b/charts/complete-graphql-postgres-provisioner/templates/deployment.yaml
@@ -56,6 +56,10 @@ spec:
           envFrom:
             - secretRef:
                 name: "hasura-secret"
+            - secretRef:
+                name: "graphql-postgresql-secret"
+            - configMapRef:
+                name: "baseline-configmap"
           {{- if .Values.image.env }}
           env: 
             {{- toYaml .Values.image.env | nindent 12 }}
