--- a/charts/complete-graphql-postgres-provisioner/templates/deployment.yaml
+++ b/charts/complete-graphql-postgres-provisioner/templates/deployment.yaml
@@ -60,8 +60,10 @@ spec:
                 name: "graphql-postgresql-secret"
             - configMapRef:
                 name: "baseline-configmap"
-          {{- if .Values.image.env }}
           env: 
+            - name: HASURA_GRAPHQL_METADATA_DATABASE_URL
+              value: postgres://$(DATABASE_USER):$(DATABASE_PASSWORD)@$(POSTGRES_HOST):$(POSTGRES_PORT)/$(DATABASE_NAME)
+          {{- if .Values.image.env }}
             {{- toYaml .Values.image.env | nindent 12 }}
           {{- end }}
           args: [ {{.Values.image.args}} ]
