--- a/charts/complete-graphql-postgres-provisioner/values.yaml
+++ b/charts/complete-graphql-postgres-provisioner/values.yaml
@@ -16,8 +16,8 @@ image:
   containerPort: 8080
   hostname: hasura
   env:
-    # - name: HASURA_GRAPHQL_METADATA_DATABASE_URL
-    #   value: postgres://YOUR_HASURA_USER:YOUR_HASURA_PASSWORD@YOUR_POSTGRES_HOST:YOUR_POSTGRES_PORT/graphql
+    - name: HASURA_GRAPHQL_METADATA_DATABASE_URL
+      value: postgres://YOUR_HASURA_USER:YOUR_HASURA_PASSWORD@YOUR_POSTGRES_HOST:YOUR_POSTGRES_PORT/graphql
       ## enable the console served by server
     - name: HASURA_GRAPHQL_ENABLE_CONSOLE
       value: "true" # set to "false" to disable console
