Keeping default values file in sync

--- a/charts/kafka-rest-producer-service/values.yaml
+++ b/charts/kafka-rest-producer-service/values.yaml
@@ -26,6 +26,12 @@ image:
     - name: OPERATION_ENV
       value: "edge"
 
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+
 ##########################
 # Caution updating below #
 ##########################
