--- a/charts/kafka-rest-consumer-service/values.yaml
+++ b/charts/kafka-rest-consumer-service/values.yaml
@@ -28,6 +28,12 @@ image:
     - name: OPERATION_ENV
       value: "edge"
 
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+
 ##########################
 # Caution updating below #
 ##########################
