Idm 1369 add initpod (#153)
* test: upload updates for iss db

* chore: fix image name for initpod

---------

Co-authored-by: HanwhaARudolph <htic.admin@hanwha-wisenet.com>

--- a/charts/rest-devicemanager/values.yaml
+++ b/charts/rest-devicemanager/values.yaml
@@ -1,6 +1,8 @@
 namespace: 'hanwha'
 fullnameOverride: rest-devicemanager
 
+postgresProvisioner:
+  image: ghcr.io/htaic/rest-devicemanager-postgres-provisioner
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/rest-devicemanager-local
