fix: change rest-devicemanager env and secretRef

--- a/charts/rest-devicemanager/templates/deployment.yaml
+++ b/charts/rest-devicemanager/templates/deployment.yaml
@@ -44,6 +44,8 @@ spec:
             - secretRef:
                 name: "baseline-postgresql-secret"
             - secretRef:
+                name: "baseline-redis-secret"
+            - secretRef:
                 name: "iss-service-secret"
             - configMapRef:
                 name: "baseline-configmap"
