--- a/charts/rest-devicemanager/values.yaml
+++ b/charts/rest-devicemanager/values.yaml
@@ -18,6 +18,11 @@ image:
   env:
     - name: OPERATION_ENV
       value: 'EDGE'
+  envFrom:
+    secretRefs:
+      - baseline-postgresql-secret
+      - baseline-redis-secret
+      - iss-service-secret
 
 # sidecarimage:
 #   name: 'logging-sidecar'
