fix: change envFrom

--- a/charts/rest-devicemanager/templates/deployment.yaml
+++ b/charts/rest-devicemanager/templates/deployment.yaml
@@ -65,10 +65,10 @@ spec:
           {{- end }}
           {{- if .Values.image.envFrom }}
           envFrom:
-            - {{- range $secretRef := .Values.image.envFrom.secretRefs }}
+            {{- range .Values.image.envFrom.secretRefs }}
               - secretRef:
-                  name: {{ $secretRef }}
-              {{- end }}
+                  name: {{ . }}
+            {{- end }}
           {{- end }}
           args: [ {{.Values.image.args}} ]
           ports:
