fix: change helm value

--- a/charts/rest-devicemanager/values.yaml
+++ b/charts/rest-devicemanager/values.yaml
@@ -18,9 +18,14 @@ image:
   env:
     - name: OPERATION_ENV
       value: 'EDGE'
+    - name: DATABASE_HOST
+      value: "baseline-postgresql"
+    - name: DATABASE_TYPE
+      value: "postgres"
+    - name: DATABASE_PORT
+      value: "5432"
   envFrom:
     secretRefs:
-      - baseline-postgresql-secret
       - baseline-redis-secret
       - iss-service-secret
 
