--- a/charts/rest-devicemanager/templates/deployment.yaml
+++ b/charts/rest-devicemanager/templates/deployment.yaml
@@ -69,6 +69,10 @@ spec:
               - secretRef:
                   name: {{ . }}
             {{- end }}
+            {{- range .Values.image.envFrom.configMapRefs }}
+              - configMapRefs:
+                  name: {{ . }}
+            {{- end }}
           {{- end }}
           args: [ {{.Values.image.args}} ]
           ports:
