fix: change all localDM's values and envFrom

--- a/charts/gql-devicemanager/templates/deployment.yaml
+++ b/charts/gql-devicemanager/templates/deployment.yaml
@@ -52,7 +52,7 @@ spec:
                   name: {{ . }}
             {{- end }}
             {{- range .Values.image.envFrom.configMapRefs }}
-              - configMapRefs:
+              - configMapRef:
                   name: {{ . }}
             {{- end }}
           {{- end }}
