--- a/charts/distributor-devicemanager/templates/deployment.yaml
+++ b/charts/distributor-devicemanager/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
                   name: {{ . }}
             {{- end }}
             {{- range .Values.image.envFrom.configMapRefs }}
-              - configMapRefs:
+              - configMapRef:
                   name: {{ . }}
             {{- end }}
           {{- end }}
