DEVO-748 change local-dm image name, values file, envFrom (#158)
* fix: fix localDM image name

* fix: change rest-devicemanager env and secretRef

* fix: change rest-devicemanager env and secretRef

* fix: change secretRef

* fix: change values

* fix: change envFrom

* fix: change helm value

* fix: change all localDM's values and envFrom

* fix: change all localDM's values and envFrom

---------

Co-authored-by: HT-jwjung <jwjung@4J1MVQ3.EP.hanwha.com>
Co-authored-by: hanwhaSYendamuri <s.yendamuri@hanwha.com>

--- a/charts/gql-devicemanager/values.yaml
+++ b/charts/gql-devicemanager/values.yaml
@@ -10,22 +10,21 @@ image:
   hostname: gql-devicemanager
   domainPath: "graphql"
   noStripPath: true
-  envFrom: baseline-redis-secret
   env:
     - name: DATABASE_HOST
-      value: "YOUR_POSTGRES_HOST"
+      value: "baseline-postgresql"
     - name: DATABASE_TYPE
       value: "postgres"
-    - name: DATABASE_PASSWORD
-      value: "YOUR_POSTGRES_PASSWORD"
     - name: DATABASE_PORT
-      value: "YOUR_POSTGRES_PORT"
-    - name: DATABASE_NAME
-      value: "postgres"
-    - name: DATABASE_USER
-      value: "postgres"
+      value: "5432"
     - name: OPERATION_ENV
       value: "EDGE"
+  envFrom:
+    secretRefs:
+      - baseline-redis-secret
+      - graphql-postgresql-secret
+    configMapRefs:
+      - baseline-configmap
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
