--- a/charts/rest-devicemanager/values.yaml
+++ b/charts/rest-devicemanager/values.yaml
@@ -12,12 +12,23 @@ image:
   hostname: rest-devicemanager
   domainPath: 'rest-devicemanager/v0.1'
   noStripPath: true
-  envFrom: baseline-redis-secret 
   livenessProbePeriodSeconds: 50
   readinessProbePeriodSeconds: 50
   env:
+    - name: OPERATION_ENV
+      value: 'EDGE'
     - name: DATABASE_HOST
-      value: 'YOUR_POSTGRES_HOST'
+      value: "baseline-postgresql"
+    - name: DATABASE_TYPE
+      value: "postgres"
+    - name: DATABASE_PORT
+      value: "5432"
+  envFrom:
+    secretRefs:
+      - baseline-redis-secret
+      - iss-service-secret
+    configMapRefs:
+      - baseline-configmap
 
 # sidecarimage:
 #   name: 'logging-sidecar'
