adding hostNetwork support for edge-webrtc-service

--- a/charts/edge-webrtc-service/values.yaml
+++ b/charts/edge-webrtc-service/values.yaml
@@ -25,11 +25,11 @@ image:
 ##########################
 # Caution updating below #
 ##########################
-sidecarimage:
-  name: "logging-sidecar"
-  repository: ghcr.io/htaic/platform-logging-service
-  pullPolicy: Always
-  tag: "latest"
+#sidecarimage:
+#  name: "logging-sidecar"
+#  repository: ghcr.io/htaic/platform-logging-service
+#  pullPolicy: Always
+#  tag: "latest"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
