--- a/charts/video-connection-manager/values.yaml
+++ b/charts/video-connection-manager/values.yaml
@@ -17,7 +17,7 @@ image:
     - name: MSG_VERSION
       value: '1.0'
     - name: GRAPHQLURL
-      value: 'http://complete-graphql-postgres-provisioner-hasura:8080/v1/api'
+      value: 'http://complete-graphql-postgres-provisioner-hasura:8080/v1/graphql'
     # - name: GRAPHQLSERVERTOKEN
     #   value: './hasura/v1/api'
 
