--- a/charts/core-edge/values.yaml
+++ b/charts/core-edge/values.yaml
@@ -7,8 +7,8 @@ service:
 
 scs:
   replicaCount: 1
+  tag: latest
   image:
-    tag: sha256:b3e11fd2480e8f5ea944e91c955810bcc6038fe947e79699f26134f3516b3848
     repository: ghcr.io/htaic/scsrun
   resources:
     requests:
@@ -45,8 +45,8 @@ edgeccs:
 
 dcs:
   replicaCount: 1
+  tag: latest
   image:
-    tag: sha256:7a2eef384c2d2c9997c7faf41b6441004757987b96af6d204227220162f0a5dc
     repository: ghcr.io/htaic/edgedcsmanagerrun
   resources:
     requests:
