--- a/charts/complete-org-service/values.yaml
+++ b/charts/complete-org-service/values.yaml
@@ -15,7 +15,7 @@ image:
       value: YOUR_AWS_REGION
     - name: AWS_ACCOUNT
       value: "YOUR_AWS_ACCOUNT_ID"
-    # Queue name Environment Variables ONLY required for Cloud
+    # Queue name Environment Variables ONLY required for Cloud - TEMPORARY FOR M2
     # - name: ORG_SERVICE_QUEUE
     #   value: YOUR_SQS_ORG_SERVICE_QUEUE
     # - name: AUTH_SERVICE_QUEUE
