--- a/charts/complete-auth-service/values.yaml
+++ b/charts/complete-auth-service/values.yaml
@@ -7,7 +7,7 @@ image:
   repository: ghcr.io/htaic/auth-service
   pullPolicy: Always
   containerPort: 3000
-  tag: "latest"
+  tag: "sha-07d8a05"
   hostname: auth
   domainPath: "auth"
   env:
