Add a separate stack for integration tests

--- a/charts/complete-auth-service/templates/test-stack-ingressroute.yaml
+++ b/charts/complete-auth-service/templates/test-stack-ingressroute.yaml
@@ -1,14 +1,15 @@
+{{ if and (.Values.testStack.enabled) }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: "{{ include ".helm.fullname" . }}-route"
+  name: "{{ include ".helm.fullname" . }}-route-test-stack"
   namespace: {{ .Values.namespace }}
 spec:
   entryPoints:
     - web
   routes:
     - kind: Rule
-      match: (Path("/{{ .Values.image.domainPath }}/{path:(v[1-9]{1,2}/){0,1}(login|realms/detect|logout)}"))
+      match: (Path("/{{ .Values.testStack.domainPath }}/{path:(v[1-9]{1,2}/){0,1}(login|realms/detect|logout)}"))
       services:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
@@ -17,20 +18,12 @@ spec:
       - name: "{{ include ".helm.fullname" . }}-headers"
       - name: "{{ include ".helm.fullname" . }}-strip"
     - kind: Rule
-      match: (PathPrefix("/{{ .Values.image.domainPath }}/api"))
+      match: (PathPrefix("/{{ .Values.testStack.domainPath }}"))
       services:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
           port: {{ .Values.image.containerPort }}
       middlewares:
-      - name: "{{ include ".helm.fullname" . }}-strip"
-    - kind: Rule
-      match: (PathPrefix("/{{ .Values.image.domainPath }}"))
-      services:
-        - name: {{ include ".helm.fullname" . }}
-          kind: Service
-          port: {{ .Values.image.containerPort }}
-      middlewares:
-      - name: "{{ include ".helm.fullname" . }}-headers"
       - name: "{{ include ".helm.fullname" . }}-forward-auth"
       - name: "{{ include ".helm.fullname" . }}-strip"
+{{ end }}
