--- a/charts/complete-auth-service/templates/test-stack-ingressroute.yaml
+++ b/charts/complete-auth-service/templates/test-stack-ingressroute.yaml
@@ -1,4 +1,4 @@
-{{ if and (.Values.testStack.enabled) }}
+{{ if .Values.testStack.enabled }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
