make sure extra spaces are removed

--- a/charts/complete-auth-service/templates/test-stack-deployment.yaml
+++ b/charts/complete-auth-service/templates/test-stack-deployment.yaml
@@ -45,7 +45,7 @@ spec:
             {{- if eq $envVar.name $overrideEnvVar.name }}
             - name: {{ $overrideEnvVar.name }}
               value: {{ $overrideEnvVar.value }}
-            {{ $found = true }}
+            {{- $found = true -}}
             {{- end }}
             {{- end -}}
             {{- end }}
