--- a/charts/authmanager/templates/ingressroute.yaml
+++ b/charts/authmanager/templates/ingressroute.yaml
@@ -8,7 +8,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: (PathPrefix("/{{ .Values.image.domainPath }}"))
+    - match: PathPrefix("/{{ .Values.image.domainPath }}")
       kind: Rule
       services:
         - name: {{ include ".helm.fullname" . }}
@@ -16,7 +16,14 @@ spec:
           port: {{ .Values.image.containerPort }}
       {{ if (not (hasKey .Values.image "noStripPath")) }}
       middlewares:
-      - name: add-trailing-slash
-      - name: "{{ include ".helm.fullname" . }}-strip"
+      - name: "{{ include ".helm.fullname" . }}-fix-forward-to-service"
       {{ end }}
+    - match: PathPrefix("/{{ .Values.image.domainPath }}/")
+      kind: Rule
+      services:
+        - name: {{ include ".helm.fullname" . }}
+          kind: Service
+          port: {{ .Values.image.containerPort }}
+      middlewares:
+      - name: "{{ include ".helm.fullname" . }}-remove-trailing-slash"
 {{ end }}
