--- a/charts/complete-auth-service/templates/test-stack-deployment.yaml
+++ b/charts/complete-auth-service/templates/test-stack-deployment.yaml
@@ -27,7 +27,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include ".helm.serviceAccountName" . }}
+      serviceAccountName: {{ include ".helm.testStackServiceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers: 
